2025-08-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/inttypes.h,
	  device/lib/incl.mk,
	  device/lib/umaxabs.c:
	  C2Y umaxabs.

2025-08-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  .version,
	  support/regression/tests/bitint-enum.c:
	  Allow bit-precise type as fixed underlying type for enum, allow signed bit-precise integer types of width 1.

2025-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  .version,
	  doc/sdccman.lyx:
	  Fix bug #3871.
	* device/lib/realloc.c:
	  Document a realloc implementation choice.

2025-08-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3870.c:
	  Fix bug #3870.

2025-08-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Improve f8(l) struct/union argument passing, also fixing bug #3869.

2025-08-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge f8l branch.

2025-08-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/fwk/lib/testfwk.c,
	  .version:
	  Restore dummy function until bugs #3863, #3864 are fixed.

2025-08-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList,
	  support/regression/fwk/lib/testfwk.c,
	  support/regression/tests/*.c.in,
	  support/regression/tests/*.c:
	  Disable some tests for pdk13 where they won't work due to lack of target memory.

2025-08-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/pdk13/Makefile.in,
	  device/lib/pdk13/_muluchar.s,
	  device/lib/pdk14/Makefile.in,
	  device/lib/pdk14/_muluchar.s,
	  device/lib/pdk15/Makefile.in,
	  device/lib/pdk15/_muluchar.s,
	  device/lib/pdk15-stack-auto/Makefile.in:
	  Enable use of hand-written 8x8->16 multiplication support routine, inspired by patch #470 by Konstantin Kim.

2025-08-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/ds390/gen.c,
	  src/ds390/ralloc.c,