@@ -1,3 +1,10 @@
+2025-08-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3873.c,
+	  support/regression/MakeList:
+	  Fix bug #3873.
+
 2025-08-30 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* device/include/inttypes.h,
